--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   terraform:
-    runs-on: [self-hosted, macOS, ARM64, ciam]
+    runs-on: self-hosted
 
     steps:
     - name: Checkout repository
