--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -33,24 +33,29 @@ jobs:
 
     - name: Parse YAML and generate Terraform configuration
       run: |
-        python generate_tf.py
+        python .github/workflows/generate_tf.py
       env:
         OKTA_API_TOKEN: ${{ secrets.OKTA_API_TOKEN }}
 
     - name: Display generated Terraform configuration
-      run: cat main.tf
+      run: cat .github/workflows/main.tf
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
 
     - name: Initialize Terraform
-      run: terraform init -input=false -no-color
+      run: |
+        cd .github/workflows
+        terraform init -input=false -no-color
 
     - name: Terraform Plan
-      run: terraform plan -input=false -no-color
+      run: |
+        cd .github/workflows
+        terraform plan -input=false -no-color
 
     - name: Apply Terraform
       run: |
+        cd .github/workflows
         echo "## Terraform Apply Results" >> $GITHUB_STEP_SUMMARY
         terraform apply -auto-approve -input=false -no-color 2>&1 | tee terraform_apply.log
         echo '```' >> $GITHUB_STEP_SUMMARY
@@ -62,4 +67,10 @@ jobs:
       if: always()
       with:
         name: terraform-logs
-        path: terraform_apply.log
+        path: .github/workflows/terraform_apply.log
+
+    - name: Clean up
+      if: always()
+      run: |
+        rm -f .github/workflows/main.tf
+        rm -f .github/workflows/terraform_apply.log
