--- a/tacos.yml
+++ b/tacos.yml
@@ -24,7 +24,7 @@ post_logout_redirect_uris:
 # token_endpoint_auth_method: The token endpoint authentication method (required)
 token_endpoint_auth_method: "client_secret_post"
 
-# groups: List of groups to be created (requiredd)
+# groups: List of groups to be created (requiredd) test change
 groups:
   - "DXP_TACOS_INTERNALUSERS"
   - "DXP_TACOS_EXTERNALUSERS"
