--- a/template.yml
+++ b/template.yml
@@ -1,35 +1,87 @@
-# app_name: The name of the application (requiredd)
-app_name: "Example App"
+# Instruction: 
+# 1. Pick your scenario by uncommenting the appropriate block and filling in the required fields.
+# 2. Only keep the relevant scenario block in the file, and remove the rest.
+# 3. Ensure all required fields are filled out as indicated by the comments.
 
-# label: The label for the Okta app (required)
-label: "Example App Label"
+scenarios:
 
-# type: The type of the Okta app (required)
-type: "native"
+  # Scenario 1: Create an Application and Associated Groups
+  # Use this scenario to create a new Okta application along with its associated user groups.
+  - name: create_application_and_group
+    
+    # app_name: The name of the application (required)
+    app_name: "Example App"
 
-# response_types: List of response types (required)
-response_types:
-  - "token"
-  - "id_token"
-  - "code"
+    # label: The label for the Okta app (required)
+    label: "Example App Label"
 
-# redirect_uris: List of redirect URIs (required)
-redirect_uris:
-  - "https://example.com/callback"
+    # type: The type of the Okta app (required)
+    # Options: "native", "web", "service", etc.
+    type: "native"
 
-# post_logout_redirect_uris: List of post-logout redirect URIs (optional)
-post_logout_redirect_uris:
-  - "https://example.com/logout"
+    # response_types: List of response types (required)
+    # Common options: "token", "id_token", "code"
+    response_types:
+      - "token"
+      - "id_token"
+      - "code"
 
-# token_endpoint_auth_method: The token endpoint authentication method (required)
-token_endpoint_auth_method: "client_secret_post"
+    # redirect_uris: List of redirect URIs for the app (required)
+    redirect_uris:
+      - "https://example.com/callback"
 
-# groups: List of groups to be created (required)
-groups:
-  - "DXP_APPNAME_INTERNALUSERS"
-  - "DXP_APPNAME_EXTERNALUSERS"
-  - "DXP_APPNAME_DEACTIVELUSERS"
+    # post_logout_redirect_uris: List of post-logout redirect URIs (optional)
+    # This is where users are redirected after they log out.
+    post_logout_redirect_uris:
+      - "https://example.com/logout"
 
-client_uri: "https://sudhanshujha.us"
-tos_uri: "https://sudhanshujha.us/automated/tos"
-policy_uri: "https://sudhanshujha.us/automated/privacy"
+    # token_endpoint_auth_method: The token endpoint authentication method (required)
+    # Options: "client_secret_post", "client_secret_basic", etc.
+    token_endpoint_auth_method: "client_secret_post"
+
+    # client_uri: URL for client information (optional)
+    client_uri: "https://example.com/client"
+
+    # tos_uri: URL for Terms of Service (optional)
+    tos_uri: "https://example.com/tos"
+
+    # policy_uri: URL for Privacy Policy (optional)
+    policy_uri: "https://example.com/privacy"
+
+    # groups: List of groups to be created for the application (required)
+    # Each group name should be unique to the application.
+    groups:
+      - "DXP_APPNAME_INTERNALUSERS"
+      - "DXP_APPNAME_EXTERNALUSERS"
+      - "DXP_APPNAME_DEACTIVELUSERS"
+
+  # Scenario 2: Create Groups for an Existing Application
+  # Use this scenario to create new user groups for an already existing Okta application.
+  - name: create_group_for_existing_application
+
+    # application_id: The unique ID of the existing Okta application (required)
+    application_id: "app_id_here"
+
+    # groups: List of groups to be created for the existing application (required)
+    # Each group name should be unique to the application.
+    groups:
+      - "DXP_APPNAME_NEW_INTERNALUSERS"
+      - "DXP_APPNAME_NEW_EXTERNALUSERS"
+
+  # Scenario 3: Add Redirect URIs to an Existing Application
+  # Use this scenario to add new redirect URIs to an existing Okta application.
+  - name: add_redirect_uris
+
+    # application_id: The unique ID of the existing Okta application (required)
+    application_id: "app_id_here"
+
+    # redirect_uris: List of new sign-in redirect URIs to add (required)
+    redirect_uris:
+      sign_in:
+        - "https://example.com/newcallback"
+
+    # post_logout_redirect_uris: List of new post-logout redirect URIs to add (optional)
+    # This is where users are redirected after they log out.
+    post_logout_redirect_uris:
+      sign_out:
+        - "https://example.com/newlogout"
