--- a/Tacos.yml
+++ b/Tacos.yml
@@ -58,27 +58,27 @@ scenarios:
   # Uncomment the block below for Scenario 2: Create Groups for an Existing Application
   - name: create_group_for_existing_application
   
+   # # application_id: The unique ID of the existing Okta application (required)
+   #  application_id: "0oalw1jv0tX2aWjZL4x7"
+  
+   #  # groups: List of groups to be created for the existing application (required)
+   #  # Each group name should be unique to the application.
+   #  groups:
+   #    - "DXP_TACOS_ROLE_ADMIN"
+
+  # Uncomment the block below for Scenario 3: Add Redirect URIs to an Existing Application
+  - name: add_redirect_uris
+  
    # application_id: The unique ID of the existing Okta application (required)
     application_id: "0oalw1jv0tX2aWjZL4x7"
   
-    # groups: List of groups to be created for the existing application (required)
-    # Each group name should be unique to the application.
-    groups:
-      - "DXP_TACOS_ROLE_ADMIN"
-
-  # Uncomment the block below for Scenario 3: Add Redirect URIs to an Existing Application
-  # - name: add_redirect_uris
+    # redirect_uris: List of new sign-in redirect URIs to add (required)
+    redirect_uris:
+      sign_in:
+        - "https://example.com/newcallbackurl"
   
-  #  # application_id: The unique ID of the existing Okta application (required)
-  #   application_id: "app_id_here"
-  
-  #   # redirect_uris: List of new sign-in redirect URIs to add (required)
-  #   redirect_uris:
-  #     sign_in:
-  #       - "https://example.com/newcallback"
-  
-  #   # post_logout_redirect_uris: List of new post-logout redirect URIs to add (optional)
-  #   # This is where users are redirected after they log out.
-  #   post_logout_redirect_uris:
-  #     sign_out:
-  #       - "https://example.com/newlogout"
+    # post_logout_redirect_uris: List of new post-logout redirect URIs to add (optional)
+    # This is where users are redirected after they log out.
+    post_logout_redirect_uris:
+      sign_out:
+        - "https://example.com/newlogouturl"
