--- a/Tacos.yml
+++ b/Tacos.yml
@@ -7,53 +7,53 @@
 scenarios:
 
   # Uncomment the block below for Scenario 1: Create an Application and Associated Groups
-  # - name: create_application_and_group
+  - name: create_application_and_group
    
-  #  # app_name: The name of the application (required)
-  #   app_name: "Tacos App"
+   # app_name: The name of the application (required)
+    app_name: "Tacos App"
   
-  #   # label: The label for the Okta app (required)
-  #   label: "App for Tacos"
+    # label: The label for the Okta app (required)
+    label: "App for Tacos"
   
-  #   # type: The type of the Okta app (required)
-  #   # Options: "native", "web", "service", etc.
-  #   type: "native"
+    # type: The type of the Okta app (required)
+    # Options: "native", "web", "service", etc.
+    type: "native"
   
-  #   # response_types: List of response types (required)
-  #   # Common options: "token", "id_token", "code"
-  #   response_types:
-  #     - "token"
-  #     - "id_token"
-  #     - "code"
+    # response_types: List of response types (required)
+    # Common options: "token", "id_token", "code"
+    response_types:
+      - "token"
+      - "id_token"
+      - "code"
   
-  #   # redirect_uris: List of redirect URIs for the app (required)
-  #   redirect_uris:
-  #     - "https://example.com/callback"
+    # redirect_uris: List of redirect URIs for the app (required)
+    redirect_uris:
+      - "https://example.com/callback"
   
-  #   # post_logout_redirect_uris: List of post-logout redirect URIs (optional)
-  #   # This is where users are redirected after they log out.
-  #   post_logout_redirect_uris:
-  #     - "https://example.com/logout"
+    # post_logout_redirect_uris: List of post-logout redirect URIs (optional)
+    # This is where users are redirected after they log out.
+    post_logout_redirect_uris:
+      - "https://example.com/logout"
   
-  #   # token_endpoint_auth_method: The token endpoint authentication method (required)
-  #   # Options: "client_secret_post", "client_secret_basic", etc.
-  #   token_endpoint_auth_method: "client_secret_post"
+    # token_endpoint_auth_method: The token endpoint authentication method (required)
+    # Options: "client_secret_post", "client_secret_basic", etc.
+    token_endpoint_auth_method: "client_secret_post"
   
-  #   # client_uri: URL for client information (optional)
-  #   client_uri: "https://example.com/client"
+    # client_uri: URL for client information (optional)
+    client_uri: "https://example.com/client"
   
-  #   # tos_uri: URL for Terms of Service (optional)
-  #   tos_uri: "https://example.com/tos"
+    # tos_uri: URL for Terms of Service (optional)
+    tos_uri: "https://example.com/tos"
   
-  #   # policy_uri: URL for Privacy Policy (optional)
-  #   policy_uri: "https://example.com/privacy"
+    # policy_uri: URL for Privacy Policy (optional)
+    policy_uri: "https://example.com/privacy"
   
-  #   # groups: List of groups to be created for the application (required)
-  #   # Each group name should be unique to the application.
-  #   groups:
-  #     - "DXP_TACOS_INTERNALUSERS"
-  #     - "DXP_TACOS_EXTERNALUSERS"
-  #     - "DXP_TACOS_DEACTIVELUSERS"
+    # groups: List of groups to be created for the application (required)
+    # Each group name should be unique to the application.
+    groups:
+      - "DXP_TACOS_INTERNALUSERS"
+      - "DXP_TACOS_EXTERNALUSERS"
+      - "DXP_TACOS_DEACTIVELUSERS"
 
   # Uncomment the block below for Scenario 2: Create Groups for an Existing Application
   # - name: create_group_for_existing_application
@@ -70,15 +70,15 @@ scenarios:
   - name: add_redirect_uris
   
    # application_id: The unique ID of the existing Okta application (required)
-    application_id: "0oalw1jv0tX2aWjZL4x7"
+    # application_id: "0oalw1jv0tX2aWjZL4x7"
   
-    # redirect_uris: List of new sign-in redirect URIs to add (required)
-    redirect_uris:
-      sign_in:
-        - "https://example.com/newcallbackurl"
+    # # redirect_uris: List of new sign-in redirect URIs to add (required)
+    # redirect_uris:
+    #   sign_in:
+    #     - "https://example.com/newcallbackurl"
   
-    # post_logout_redirect_uris: List of new post-logout redirect URIs to add (optional)
-    # This is where users are redirected after they log out.
-    post_logout_redirect_uris:
-      sign_out:
-        - "https://example.com/newlogouturl"
+    # # post_logout_redirect_uris: List of new post-logout redirect URIs to add (optional)
+    # # This is where users are redirected after they log out.
+    # post_logout_redirect_uris:
+    #   sign_out:
+    #     - "https://example.com/newlogouturl"
